--- a/AWS/bs4-Translate-Comprehend.ipynb
+++ b/AWS/bs4-Translate-Comprehend.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "##  Project Info:\n",
     "\n",
-    "In this project a newspaper's website was scraped go get data about their headlines.<br>\n",
+    "In this project a newspaper's website was scraped to get data about their headlines.<br>\n",
     "AWS Translate and Comprehend are used to do a Sentiment Analysis on the obtained data. <br>\n",
     "\n",
     "\n",
