--- a/AWS/bs4-Translate-Comprehend.ipynb
+++ b/AWS/bs4-Translate-Comprehend.ipynb
@@ -200,7 +200,7 @@
     ")\n",
     "\n",
     "# Create an AWS Translate client\n",
-    "translate = session.client('translate')  # Change the region to your desired region\n",
+    "translate = session.client('translate')\n",
     "\n",
     "# Function to translate text using AWS Translate\n",
     "def translate_text(text, target_language_code):\n",
